# sdkit

./: .gitignore  .gitmodules  CI.md  CMakeLists.txt  README.md  generate_image.py  options.json
.github/workflows/: ci_metal.yaml
cmake/: arm64-windows-llvm.cmake  x64-windows-llvm.cmake
include/: image_filters.h  image_generator.h  image_utils.h  logging.h  model_detection.h  model_manager.h  options_manager.h  server.h  task_state.h
scripts/: __init__.py  build.py  build_all.py  build_common.py  build_cpu.py  build_cuda.py  build_metal.py  build_vulkan.py  ci.py  upload_all.py
scripts/upload/: __main__.py
src/: image_filters.cpp  image_generator.cpp  image_utils.cpp  logging.cpp  main.cpp  model_detection.cpp  model_manager.cpp  options_manager.cpp  server.cpp  task_state.cpp
tools/: CMakeLists.txt  modelinfo.cpp
